--- a/src/analysis/analysis.ipynb
+++ b/src/analysis/analysis.ipynb
@@ -2,18 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import os\n",
     "from pathlib import Path\n",
+    "\n",
+    "import torch\n",
     "from torchvision import datasets, transforms\n",
-    "import matplotlib.pyplot as plt \n",
-    "import cv2\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
    ]
   },
   {
@@ -28,12 +27,12 @@
     "                                 transforms.ToTensor()])\n",
     "dataset = datasets.ImageFolder(Path('/home/miza/plant-disease/src/analysis/data_analysis.ipynb')\\\n",
     "    .parent.parent.parent.joinpath('data').joinpath('leaves'),transform=transform)\n",
-    "    \n",
+    "\n",
     "train_size = int(0.8 * len(dataset))\n",
     "test_size = len(dataset) - train_size\n",
     "train_dataset, test_dataset = torch.utils.data.random_split(dataset, [train_size, test_size])\n",
     "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=32, shuffle=True,num_workers=15)\n",
-    "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=32, shuffle=False,num_workers=15)   \n",
+    "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=32, shuffle=False,num_workers=15)\n",
     "def save_dataset():\n",
     "    train_folder = Path('/home/miza/plant-disease/src/analysis/data_analysis.ipynb')\\\n",
     "        .parent.parent.parent.joinpath('data').joinpath('train')\n",
@@ -80,6 +79,8 @@
    "source": [
     "\n",
     "import torch.nn.functional as F\n",
+    "\n",
+    "\n",
     "class Convolutional(torch.nn.Module):\n",
     "    def __init__(self):\n",
     "        super(Convolutional, self).__init__()\n",
@@ -89,13 +90,13 @@
     "        self.pool2= torch.nn.MaxPool2d(2)\n",
     "        self.conv3 = torch.nn.Conv2d(64,128,3,2,padding_mode='replicate')\n",
     "        self.pool3= torch.nn.MaxPool2d(2)\n",
-    "        self.conv4 = torch.nn.Conv2d(128,256,3,2,padding_mode='replicate')     \n",
+    "        self.conv4 = torch.nn.Conv2d(128,256,3,2,padding_mode='replicate')\n",
     "        self.pool4= torch.nn.MaxPool2d(2)\n",
     "        self.conv5 = torch.nn.Conv2d(256,512,3,2,padding_mode='replicate')\n",
-    "        \n",
+    "\n",
     "        self.fc1 = torch.nn.Linear(1152, 32)\n",
     "        self.fc2 = torch.nn.Linear(32, 4)\n",
-    "    \n",
+    "\n",
     "    def forward(self,x):\n",
     "        x= self.pool1(F.relu(self.conv1(x)))\n",
     "        x= self.pool2(F.relu(self.conv2(x)))\n",
@@ -105,9 +106,9 @@
     "        x = self.fc2(x)\n",
     "        x = F.softmax(x, dim=1)\n",
     "        return x\n",
-    "    \n",
+    "\n",
     "    def num_flat_features(self, x):\n",
-    "        size = x.size()[1:] \n",
+    "        size = x.size()[1:]\n",
     "        num_features = 1\n",
     "        for s in size:\n",
     "            num_features *= s\n",
@@ -320,7 +321,7 @@
     "    running_loss = 0.0\n",
     "    for i, data in enumerate(train_loader):\n",
     "        inputs, labels = data\n",
-    "        inputs, labels = inputs.to(device), labels.to(device) \n",
+    "        inputs, labels = inputs.to(device), labels.to(device)\n",
     "        optimizer.zero_grad()\n",
     "        outputs = model(inputs)\n",
     "        loss = loss_fn(outputs, labels)\n",
